--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,4 +5,5 @@
         <attr name="letter" format="reference" />
         <attr name="text" format="reference" />
     </declare-styleable>
+    <attr name="customAnswerRadioButton" format="reference" />
 </resources>
