--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorAccent">@color/accent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="@attr/customAnswerRadioButton">@style/radioButton</item>
     </style>
 
     <style name="AppTheme" parent="AppTheme.Common">
@@ -64,5 +65,6 @@
         <item name="android:button">@null</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textSize">17sp</item>
     </style>
 </resources>
