--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,4 +6,5 @@
         <attr name="text" format="reference" />
     </declare-styleable>
     <attr name="customAnswerRadioButton" format="reference" />
+    <attr name="customAnswerCheckbox" format="reference" />
 </resources>
