--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <dimen name="input_height">50dp</dimen>
     <dimen name="radio_button_padding">10dp</dimen>
     <dimen name="radio_button_radius">5dp</dimen>
+    <dimen name="checkbox_radius">50dp</dimen>
     <dimen name="button_height">60dp</dimen>
     <dimen name="button_width">200dp</dimen>
     <dimen name="button_text">17sp</dimen>
