--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="@attr/customAnswerRadioButton">@style/radioButton</item>
+        <item name="@attr/customAnswerCheckbox">@style/checkbox</item>
     </style>
 
     <style name="AppTheme" parent="AppTheme.Common">
@@ -62,6 +63,14 @@
 
     <style name="radioButton" parent="@android:style/Widget.CompoundButton.RadioButton">
         <item name="android:background">@drawable/radio_button</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/textPrimary</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="checkbox" parent="@android:style/Widget.CompoundButton.CheckBox">
+        <item name="android:background">@drawable/checkbox</item>
         <item name="android:button">@null</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/textPrimary</item>
