--- a/app/src/main/res/layout/fragment_branch_selection.xml
+++ b/app/src/main/res/layout/fragment_branch_selection.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="@dimen/section_header_height"
         android:orientation="vertical"
         android:gravity="center"
         android:paddingLeft="@dimen/activity_horizontal_margin"
