--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -1,34 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ro.code4.votehack.widget.ScrollViewWithFixedBottom xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal">
 
-    <TextView
-        android:id="@+id/question_description"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginTop="@dimen/header_margin_vertial"
-        android:layout_marginBottom="@dimen/header_margin_vertial"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:textSize="@dimen/header_text"
-        android:textColor="@color/textPrimary"
-        android:gravity="center"
-        tools:text="What's your favourite color today? What about tomorrow?"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/question_description"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="@dimen/header_margin_vertial"
+            android:layout_marginBottom="@dimen/header_margin_vertial"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:textSize="@dimen/header_text"
+            android:textColor="@color/textPrimary"
+            android:gravity="center"
+            tools:text="What's your favourite color today? What about tomorrow?"/>
 
-    <FrameLayout
-        android:id="@+id/question_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/question_description"
-        android:layout_above="@+id/question_buttons"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"/>
+        <FrameLayout
+            android:id="@+id/question_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/question_description"
+            android:layout_above="@+id/question_buttons"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"/>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/question_buttons"
@@ -51,4 +56,4 @@
             android:text="@string/question_next"
             android:theme="@style/buttonEmbedded"/>
     </LinearLayout>
-</RelativeLayout>
+</ro.code4.votehack.widget.ScrollViewWithFixedBottom>
