Fix linter and release build

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,7 +14,7 @@
         <item name="android:colorControlHighlight">@color/accent</item>
     </style>
 
-    <style name="BaseButton">
+    <style name="BaseButton" parent="BaseButtonCommon">
         <item name="android:textAllCaps">false</item>
     </style>
 
