--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,10 +26,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <style name="BaseButton.Common">
+    <style name="BaseButtonCommon">
 
     </style>
-    <style name="BaseButton" parent="BaseButton.Common">
+    <style name="BaseButton" parent="BaseButtonCommon">
         <!-- Can be overriden in values-v16 and values-v21 -->
     </style>
 
