--- a/app/src/main/res/layout/fragment_branch_details.xml
+++ b/app/src/main/res/layout/fragment_branch_details.xml
@@ -59,7 +59,7 @@
             android:layout_marginBottom="@dimen/label_top_spacing"
             android:orientation="horizontal">
             <ro.code4.monitorizarevot.widget.AnswerRadioButton
-                android:id="@+id/branch_sex_man"
+                android:id="@+id/branch_sex_male"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/button_height"
                 android:layout_weight="1"
@@ -69,7 +69,7 @@
                 android:layout_width="@dimen/activity_horizontal_margin"
                 android:layout_height="match_parent" />
             <ro.code4.monitorizarevot.widget.AnswerRadioButton
-                android:id="@+id/branch_sex_woman"
+                android:id="@+id/branch_sex_female"
                 android:layout_width="0dp"
                 android:layout_height="@dimen/button_height"
                 android:layout_weight="1"
