--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -26,39 +26,36 @@
     </android.support.design.widget.CoordinatorLayout>
 
     <LinearLayout
-        android:layout_width="300dp"
+        android:layout_width="@dimen/menu_width"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:orientation="vertical"
         android:background="#FFFFFF"
-        android:paddingTop="@dimen/status_bar_spacer"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin">
+        android:paddingTop="@dimen/status_bar_spacer">
         <TextView
             android:id="@+id/menu_forms"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginTop="25dp"
+            android:layout_height="@dimen/menu_item_height"
             android:text="@string/menu_forms"
-            android:textSize="18sp"/>
+            style="@style/menuItem"/>
         <TextView
-            android:id="@+id/menu_questions"
+            android:id="@+id/menu_change_branch"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="@string/menu_questions"
-            android:textSize="18sp"/>
+            android:layout_height="@dimen/menu_item_height"
+            android:text="@string/menu_change_branch"
+            style="@style/menuItem"/>
         <TextView
             android:id="@+id/menu_guide"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/menu_item_height"
             android:text="@string/menu_guide"
-            android:textSize="18sp"/>
+            style="@style/menuItem"/>
         <TextView
             android:id="@+id/menu_call"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/menu_item_height"
             android:text="@string/menu_call"
-            android:textSize="18sp"/>
+            style="@style/menuItem"/>
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
 
