--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,19 +17,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center">
-
+            android:layout_weight="1">
+            <TextView
+                android:id="@+id/app_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                tools:text="V0.00"
+                android:textColor="@color/textSecondary"
+                android:textSize="14sp" />
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 app:srcCompat="@drawable/ic_login"
-                android:id="@+id/logo" />
-        </LinearLayout>
+                android:id="@+id/logo"
+                tools:ignore="ContentDescription" />
+        </RelativeLayout>
 
         <LinearLayout
             android:orientation="vertical"
