--- a/app/src/main/res/layout/fragment_note.xml
+++ b/app/src/main/res/layout/fragment_note.xml
@@ -90,6 +90,6 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:text="@string/button_send"
-        android:theme="@style/buttonEmbedded" />
+        style="@style/buttonEmbedded" />
 
 </ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom>
