--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,8 +87,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
                 android:text="@string/login"
-                android:theme="@style/buttonEmbedded"
-                android:layout_gravity="bottom" />
+                android:layout_gravity="bottom"
+                style="@style/buttonEmbedded"/>
         </LinearLayout>
 
     </LinearLayout>
