--- a/app/src/main/res/layout/fragment_branch_details.xml
+++ b/app/src/main/res/layout/fragment_branch_details.xml
@@ -130,5 +130,5 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/button_height"
         android:text="@string/button_continue_to_forms"
-        android:theme="@style/buttonEmbedded" />
+        style="@style/buttonEmbedded" />
 </ro.code4.monitorizarevot.widget.ScrollViewWithFixedBottom>
