--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -2,8 +2,6 @@
 <resources>
     <style name="AppTheme" parent="AppTheme.Common">
         <item name="android:windowActivityTransitions">true</item>
-        <!--<item name="android:windowSharedElementEnterTransition">@transition/login_transform</item>-->
-        <!--<item name="android:windowSharedElementExitTransition">@transition/login_transform</item>-->
         <item name="android:windowEnterTransition">@transition/fade_in</item>
         <item name="android:windowExitTransition">@transition/fade_out</item>
     </style>
@@ -14,29 +12,26 @@
         <item name="android:colorControlHighlight">@color/accent</item>
     </style>
 
-    <style name="BaseButton" parent="BaseButtonCommon">
-        <item name="android:textAllCaps">false</item>
-    </style>
-
-    <style name="buttonDark" parent="BaseButton">
+    <style name="buttonDarkTheme">
         <item name="android:colorButtonNormal">@color/backgroundDark</item>
         <item name="android:colorAccent">@color/backgroundAccent</item>
-        <item name="android:textColor">@color/textLight</item>
-        <item name="android:textSize">@dimen/button_text</item>
     </style>
 
-    <style name="buttonLight" parent="BaseButton">
+    <style name="buttonLightTheme">
         <item name="android:colorButtonNormal">@color/backgroundLight</item>
         <item name="android:colorAccent">@color/backgroundAccent</item>
-        <item name="android:textColor">@color/textPrimary</item>
-        <item name="android:textSize">@dimen/button_text</item>
     </style>
 
-    <style name="buttonEmbedded" parent="BaseButton">
-        <item name="android:colorButtonNormal">@color/backgroundDark</item>
-        <item name="android:colorAccent">@color/backgroundDark</item>
-        <item name="android:textColor">@color/textLight</item>
-        <item name="android:textSize">@dimen/button_text_embedded</item>
+    <style name="buttonDark" parent="buttonDarkCommon">
+        <item name="android:theme">@style/buttonDarkTheme</item>
+    </style>
+
+    <style name="buttonLight" parent="buttonLightCommon">
+        <item name="android:theme">@style/buttonLightTheme</item>
+    </style>
+
+    <style name="buttonEmbedded" parent="buttonEmbeddedCommon">
+        <item name="android:theme">@style/buttonDarkTheme</item>
     </style>
 
     <style name="SharedElementLoginBackground">
