--- a/app/src/main/res/layout/fragment_guide.xml
+++ b/app/src/main/res/layout/fragment_guide.xml
@@ -5,14 +5,9 @@
     android:layout_height="match_parent"
     android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin">
-    <TextView
+
+    <WebView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/title_height"
-        android:text="@string/guide_title"
-        style="@style/title"/>
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/guide_text"
-        android:textColor="@color/textPrimary"/>
+        android:layout_height="match_parent"
+        android:id="@+id/web_view_guide" />
 </LinearLayout>
