fixed crash: android.app.ActivityThread.performLaunchActivity java.lang.IllegalStateException: You need to use a Theme.AppCompat theme (or descendant) with this activity.

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:windowExitTransition">@transition/fade_out</item>
     </style>
 
-    <style name="AppTheme.Start">
+    <style name="AppTheme.Start" parent="AppTheme">
         <item name="android:windowBackground">@drawable/ic_login_bkg</item>
     </style>
 
