--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,8 @@
         <item name="colorAccent">@color/accent</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-        <item name="@attr/customAnswerRadioButton">@style/radioButton</item>
-        <item name="@attr/customAnswerCheckbox">@style/checkbox</item>
+        <item name="customAnswerRadioButton">@style/radioButton</item>
+        <item name="customAnswerCheckbox">@style/checkbox</item>
     </style>
 
     <style name="AppTheme" parent="AppThemeCommon">
