--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:contentAuthority="ro.code4.monitorizarevot"
+    android:contentAuthority="@string/sync_adapter_authority"
     android:accountType="code4.ro"
     android:userVisible="false"
     android:supportsUploading="true"
