Fix sync adapter auth

--- a/app/src/main/res/xml/syncadapter.xml
+++ b/app/src/main/res/xml/syncadapter.xml
@@ -2,7 +2,7 @@
 <sync-adapter
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:contentAuthority="@string/sync_adapter_authority"
-    android:accountType="code4.ro"
+    android:accountType="@string/account_type"
     android:userVisible="false"
     android:supportsUploading="true"
     android:allowParallelSyncs="false"
