--- a/app/src/mock/res/values/authorities.xml
+++ b/app/src/mock/res/values/authorities.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="provider_authority">ro.code4.monitorizarevot.mock</string>
     <string name="sync_adapter_authority">ro.code4.monitorizarevot.mock</string>
+    <string name="account_type">mock.code4.ro</string>
 </resources>
