--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -56,6 +56,12 @@
             android:layout_height="@dimen/menu_item_height"
             android:text="@string/menu_call"
             style="@style/menuItem"/>
+        <TextView
+            android:id="@+id/menu_logout"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/menu_item_height"
+            android:text="@string/menu_logout"
+            style="@style/menuItem"/>
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
 
