--- a/app/src/main/res/layout/activity_toolbar.xml
+++ b/app/src/main/res/layout/activity_toolbar.xml
@@ -32,6 +32,20 @@
         android:orientation="vertical"
         android:background="#FFFFFF"
         android:paddingTop="@dimen/status_bar_spacer">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:background="@color/primary">
+            <ImageView
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:src="@drawable/logo_new"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"/>
+        </LinearLayout>
+
         <TextView
             android:id="@+id/menu_forms"
             android:layout_width="match_parent"
@@ -44,6 +58,17 @@
             android:layout_height="@dimen/menu_item_height"
             android:text="@string/menu_change_branch"
             style="@style/menuItem"/>
+
+        <View android:layout_height="1dp"
+            android:layout_width="match_parent"
+            android:background="@color/divider"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/support"
+            style="@style/menuSectionItem" />
+
         <TextView
             android:id="@+id/menu_guide"
             android:layout_width="match_parent"
@@ -56,6 +81,11 @@
             android:layout_height="@dimen/menu_item_height"
             android:text="@string/menu_call"
             style="@style/menuItem"/>
+
+        <View android:layout_height="1dp"
+            android:layout_width="match_parent"
+            android:background="@color/divider"/>
+
         <TextView
             android:id="@+id/menu_logout"
             android:layout_width="match_parent"
