--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -62,6 +62,17 @@
         <item name="android:textColor">@color/textPrimary</item>
     </style>
 
+    <style name="menuSectionItem">
+        <item name="android:background">@drawable/background_menu_item</item>
+        <item name="android:paddingTop">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingStart">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingEnd">@dimen/activity_horizontal_margin</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/textSecondary</item>
+    </style>
+
     <style name="title">
         <item name="android:textColor">@color/textPrimary</item>
         <item name="android:textSize">@dimen/header_text</item>
