--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -7,6 +7,7 @@
     android:gravity="center_horizontal">
 
     <LinearLayout
+        android:id="@+id/question_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
