Fix #79 Add phone number prefix

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,29 +1,32 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="ro.code4.monitorizarevot.LoginActivity">
 
     <FrameLayout
         android:id="@+id/purple_background"
         style="@style/SharedElementLoginBackground"
-        android:background="@drawable/ic_login_bkg"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@drawable/ic_login_bkg">
+
         <LinearLayout
             android:id="@+id/login_organisation_link"
             android:layout_width="match_parent"
             android:layout_height="36dp"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
+            android:background="@color/backgroundLight"
             android:gravity="bottom|end"
-            android:background="@color/backgroundLight">
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp">
+
             <TextView
                 style="text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/developed_by"/>
+                android:text="@string/developed_by" />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,84 +36,117 @@
     </FrameLayout>
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="36dp">
+        android:layout_marginTop="36dp"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin">
 
         <RelativeLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/app_version"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="5dp"
-                android:layout_marginTop="5dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                tools:text="V0.00"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="5dp"
                 android:textColor="@color/textSecondary"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text="V0.00" />
+
             <ImageView
+                android:id="@+id/logo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 app:srcCompat="@drawable/logo_new"
-                android:id="@+id/logo"
                 tools:ignore="ContentDescription" />
         </RelativeLayout>
 
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.hbb20.CountryCodePicker
+                    android:id="@+id/country_code"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".3"
+                    android:gravity="bottom"
+                    app:ccp_autoDetectCountry="true"
+                    app:ccp_countryAutoDetectionPref="SIM_ONLY"
+                    app:ccp_defaultNameCode="RO"
+                    app:ccp_showFlag="false" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight=".7"
+                    android:textColorHint="@color/textPrimary">
+
+                    <EditText
+                        android:id="@+id/phone"
+                        style="@style/InputLogin"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/input_height"
+                        android:background="@android:color/transparent"
+                        android:hint="@string/login_phone"
+                        android:includeFontPadding="false"
+                        android:inputType="phone" />
+
+
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/accent" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColorHint="@color/textPrimary"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin">
-
-                <EditText
-                    android:id="@+id/phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/input_height"
-                    android:hint="@string/login_phone"
-                    android:inputType="phone"
-                    style="@style/InputLogin"/>
-
-            </android.support.design.widget.TextInputLayout>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textColorHint="@color/textPrimary"
-                android:paddingStart="@dimen/activity_horizontal_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:layout_marginBottom="@dimen/login_margin_bottom">
+                android:textColorHint="@color/textPrimary">
 
                 <EditText
                     android:id="@+id/branch"
+                    style="@style/InputLogin"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/input_height"
+                    android:background="@android:color/transparent"
                     android:hint="@string/login_branch"
-                    android:inputType="textPassword"
                     android:imeOptions="actionDone"
-                    style="@style/InputLogin"/>
+                    android:inputType="textPassword" />
 
             </android.support.design.widget.TextInputLayout>
 
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="@dimen/login_margin_bottom"
+                android:background="@color/accent" />
+
             <Button
                 android:id="@+id/login_button"
+                style="@style/buttonEmbedded"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/button_height"
-                android:text="@string/login"
                 android:layout_gravity="bottom"
-                style="@style/buttonEmbedded"/>
+                android:text="@string/login" />
         </LinearLayout>
 
     </LinearLayout>
